--- a/admission_by_age.html
+++ b/admission_by_age.html
@@ -114,7 +114,7 @@
     </div>
     <div id="chart"></div>
 
-    <script src="js/script.js"></script>
+    <script src="js/addmission_by_age.js"></script>
 </body>
 
 </html>
