Add daily new cases graph

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 
 <body>
     <h1 id="title" class="pt-3 pb-2">How were states in the US impacted by COVID-19?</h1>
+
+    <button id="toggleButton">Toggle Daily/Cumulative Cases</button>
     <h3 id="total-cases-title" class="graph-title">Cumulative Total Reported Cases</h3>
     <div id="total-cases-line-graph"></div>
 
