cases per capita_plotMaps

--- a/maps_by_county.html
+++ b/maps_by_county.html
@@ -44,7 +44,7 @@
         transition: opacity 0.3s; /* Smooth transition for mouse-over effects */
     }
     .thumbnail-bar img:hover {
-        opacity: 1; /* Thumbnails are fully opaque when hovered */
+        opacity: 1; 
     }
     #maps-title {
         position: absolute; /* Position the title absolutely within .map-container */
