--- a/maps_by_county.html
+++ b/maps_by_county.html
@@ -63,10 +63,11 @@
   <!-- Thumbnail bar -->
   <div class="thumbnail-bar">
     <!-- Thumbnails as buttons to switch map modes -->
-    <img src="./img/img1.png" alt="Cases" title="Cases per capita">
-    <img src="./img/img1.png" alt="Deaths" title="Deaths per capita">
-    <img src="./img/img1.png" alt="Hospitalized" title="Hospitalized">
-    <img src="./img/img1.png" alt="Vaccinations" title="Vaccinations">
+    <img id="cases-btn" src="./img/cases.png" alt="Cases" title="Cases per capita">
+    <img id="deaths-btn" src="./img/deaths.png" alt="Deaths" title="Deaths per capita">    
+    <img id="vaccinations-btn" src="./img/vaccination.png" alt="Vaccinations" title="Vaccination">    
+    <img id="hospitalized-btn" src="./img/hospitalized.png" alt="hospitalized" title="Hospitalized">    
+
     <!-- Add more thumbnails as needed -->
   </div>
 </div>
