--- a/maps_by_county.html
+++ b/maps_by_county.html
@@ -81,11 +81,11 @@
         opacity: 1; /* Active state opacity */
         font-weight: bold;
     }
-    #maps-title {
-        position: absolute; /* Position the title absolutely within .map-container */
-        top: 10px; /* Distance from the top of .map-container */
-        left: 3.4%; /* Center horizontally relative to .map-container */
-        z-index: 10; /* Ensure the title is above other elements */
+     #maps-title {
+        text-align: left;
+        color: #333;
+        margin-left: 30px;
+        font-family: Arial, Helvetica, sans-serif;
     }
     #tooltip {
         background: rgba(255, 255, 255, 0.8);
@@ -102,6 +102,8 @@
 </style>
 </head>
 <body>
+
+<h2 id="maps-title">Cases, Deaths per Capita, Hospitalized and Vaccinations Statewide</h2>
 
 <!-- <h2 id="maps-title">Maps</h2> -->
   
