--- a/admission_by_age.html
+++ b/admission_by_age.html
@@ -98,15 +98,20 @@
             #chart-title {
                 text-align: center;
                 color: #333;
-                margin-top: 20px;
             }
+        }
+        #charts-title {
+            text-align: left;
+            color: #333;
+            margin-left: 30px;
+            font-family: Arial, Helvetica, sans-serif;
         }
     </style>
 </head>
 
 <body>
 
-    <h2 id="chart-title">Daily/Weekly/Monthly New Hospital Admissions by Age</h2>
+    <h2 id="charts-title">Daily/Weekly/Monthly New Hospital Admissions by Age</h2>
     <div id="buttons">
         <button id="daily" class="timeframe-btn">Daily</button>
         <button id="weekly" class="timeframe-btn active">Weekly</button>
